--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
@@ -130,7 +130,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
-                      <Component id="jSeparator1" pref="672" max="32767" attributes="0"/>
+                      <Component id="jSeparator1" pref="673" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -157,25 +157,33 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabelSimulationCount" pref="286" max="32767" attributes="0"/>
+                          <Component id="jLabelSimulationCount" pref="287" max="32767" attributes="0"/>
                           <Component id="jTabbedPane1" alignment="0" pref="0" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jButtonOpenSCPN" pref="154" max="32767" attributes="1"/>
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                              <Component id="jButtonReload" pref="127" max="32767" attributes="1"/>
+                              <Component id="jButtonReload" pref="128" max="32767" attributes="1"/>
                           </Group>
-                          <Component id="jSeparator2" alignment="0" pref="286" max="32767" attributes="1"/>
+                          <Component id="jSeparator2" alignment="0" pref="287" max="32767" attributes="1"/>
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="jButtonExport" pref="149" max="32767" attributes="0"/>
+                              <Component id="jButtonExport" pref="150" max="32767" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="jButton1" min="-2" pref="137" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="jButtonGenerateListOfExperiments" alignment="0" pref="286" max="32767" attributes="1"/>
-                          <Component id="jSeparator3" alignment="0" pref="286" max="32767" attributes="1"/>
-                          <Component id="jButtonLoadCacheFile" alignment="1" pref="286" max="32767" attributes="0"/>
+                          <Component id="jButtonGenerateListOfExperiments" alignment="0" pref="287" max="32767" attributes="1"/>
+                          <Component id="jSeparator3" alignment="0" pref="287" max="32767" attributes="1"/>
+                          <Component id="jButtonLoadCacheFile" alignment="1" pref="287" max="32767" attributes="0"/>
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="jComboBoxSimulationType" pref="155" max="32767" attributes="0"/>
-                              <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Group type="102" attributes="0">
+                                      <Component id="jComboBoxSimulationType" pref="156" max="32767" attributes="0"/>
+                                      <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <Component id="jComboBoxBenchmarkFunction" pref="155" max="32767" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jButton2" max="32767" attributes="1"/>
                                   <Component id="jComboBoxOptimizationType" alignment="0" pref="121" max="32767" attributes="1"/>
@@ -186,7 +194,7 @@
                               <Component id="jButtonStartOptimization" alignment="1" max="32767" attributes="1"/>
                               <Component id="jLabelExportStatus" alignment="1" pref="265" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="jButtonStartBatchSimulation" alignment="0" pref="286" max="32767" attributes="1"/>
+                          <Component id="jButtonStartBatchSimulation" alignment="0" pref="287" max="32767" attributes="1"/>
                       </Group>
                   </Group>
               </Group>
@@ -195,7 +203,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jButtonEnterURLToSimServer" min="-2" pref="192" max="-2" attributes="0"/>
-              <EmptySpace pref="493" max="32767" attributes="0"/>
+              <EmptySpace pref="494" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -234,7 +242,10 @@
                           <Component id="jComboBoxOptimizationType" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jComboBoxBenchmarkFunction" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
@@ -409,6 +420,7 @@
     <Component class="javax.swing.JButton" name="jButtonStartOptimization">
       <Properties>
         <Property name="text" type="java.lang.String" value="Start Optimization"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonStartOptimizationActionPerformed"/>
@@ -509,6 +521,17 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonPlotRActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="jComboBoxBenchmarkFunction">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="new DefaultComboBoxModel(typeOfBenchmarkFunction.values())" type="code"/>
+        </Property>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
+      <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jComboBoxBenchmarkFunctionItemStateChanged"/>
       </Events>
     </Component>
   </SubComponents>
