--- a/timenetws-server/.settings/org.eclipse.wst.common.component
+++ b/timenetws-server/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="timenetws-server">
         <wb-resource deploy-path="/" source-path="/WebContent"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/libs"/>
         <property name="java-output-path" value="/timenetws-server/build/classes"/>
         <property name="context-root" value="timenetws-server"/>
     </wb-module>
